--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"@stylistic/eslint-plugin": "1.0.1",
 		"eslint": "8.53.0",
 		"gh-pages": "6.0.0",
-		"nuxt": "3.8.1",
-		"terser": "5.24.0"
+		"nuxt": "3.8.1"
 	}
 }
