--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint": "8.53.0",
 		"gh-pages": "6.0.0",
 		"nuxt": "3.8.1",
+		"nuxt-mongoose": "1.0.3",
 		"sass": "1.69.5",
 		"stylelint": "15.11.0",
 		"stylelint-config-html": "1.1.0",
